yaml/polls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polls-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: hello.polls.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polls
                port:
                  number: 5000
---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: polls-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     cert-manager.io/cluster-issuer: "letsencrypt-staging"
# spec:
#   tls:
#   - hosts:
#     - your_domain.com
#     secretName: polls-tls
#   rules:
#   - host: your_domain.com
#     http:
#       paths:
#       - backend:
#           serviceName: polls
#           servicePort: 8000
